# hydroponicsmonitor

./: Cargo.toml  README.md
esp32-server/: .env.example  Cargo.toml
esp32-server/migrations/: 20240108102017_init.sql
esp32-server/src/: main.rs
esp32-server/src/repo/sql/: base.rs  postgres.rs
