[package]
name = "esp32-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.7.3", features = [ "postgres", "runtime-tokio-native-tls" ]}
tokio = { version = "1.35.1", features = [ "rt-multi-thread", "macros" ]}
